infra/k8s/ingress-srv.yaml
# this is ingress-service used for routing from expternal requests came to cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true" 
spec:
  rules:
    - host: ticketing.dev    # madeup domain only works on localhost
      http:
        paths:
          - path: /api/users/?(.*)  # redirecting to auth-srv when prefix is api/user/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
